--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteBase /eCoderMart/
+RewriteBase /coder/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
